k3s/cv/20-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cv
  namespace: web
  labels:
    app: cv
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: cv
  template:
    metadata:
      labels:
        app: cv
    spec:
      imagePullSecrets:
        - name: regcred-cv
      containers:
        - name: cv
          image: ghcr.io/enoal-fauchille-bolle/cv:latest
          ports:
            - containerPort: 50021
              protocol: TCP
          resources:
            requests:
              memory: "64Mi"
              cpu: "10m"
            limits:
              memory: "128Mi"
              cpu: "100m"
