k3s/cv/30-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cv-svc
  namespace: web
spec:
  selector:
    app: cv
  ports:
    - name: http
      port: 80
      targetPort: 50021
