k3s/cv/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cv-ingress
  namespace: web
spec:
  rules:
    - host: cv-astra.enoal.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cv-svc
                port:
                  number: 80
